--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,11 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Setup .NET Core 3
+        uses: actions/setup-dotnet@v1
+        with:
+          # dotnet-version: '6.0.100-alpha.1.20472.11'
+          dotnet-version: '3.0.0'
       # - name: Cache SonarCloud packages
       #   uses: actions/cache@v1
       #   with:
